--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <li class="nav-item"><a href="#" class="nav-link text-light">About</a></li>
                             <li class="nav-item"><a href="#" class="nav-link text-light">Services</a></li>
                             <li class="nav-item"><a href="#" class="nav-link text-light">Pricing</a></li>
-                            <li class="nav-item dropdown">
+                           g <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-light" href="#" role="button"
                                     data-bs-toggle="dropdown" aria-expended="false">Products
                                 </a>
